--- a/trunk/changelog.txt
+++ b/trunk/changelog.txt
@@ -1,3 +1,6 @@
 * 0.2.1
 - added System.executablePath to get argv[0]
 - added locale/language/languages support
+  user can override the default locale
+  with env vars LC_ALL and/or LANG
+
