prep for release 0.2.5

--- a/trunk/changelog.txt
+++ b/trunk/changelog.txt
@@ -1,6 +1,7 @@
-* 0.2.1
+* 0.2.5
 - added System.executablePath to get argv[0]
 - added locale/language/languages support
   user can override the default locale
   with env vars LC_ALL and/or LANG
+- added full flash platform API mock
 
