--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -14,16 +14,28 @@ tags: n/a
 == v0.3 ==
 
  * more C libs
- * more flash platform APIs
- * Socket, !SocketServer
+ * more flash platform APIs implementation
+ * Socket, !SocketServer implementations
+ * !SharedObject (read/write) implementation
+ * !LocalConnection implementation
  * full system info
    * "Mac OS X 10.5.1" instead of "Macintosh"
- * locale/language detection
-
+ 
 release: (TBD)
 
 tags: n/a
 
+== v0.2.5 ==
+
+ * all flash platform APIs (most as mock / empty classes)
+ * locale/language detection
+ * executable path (argv[0])
+ * [http://code.google.com/p/astuce/source/browse/#svn/cli/trunk ASTUce CLI] is build on redshell 0.2.5
+
+release: 13/01/2009
+
+tags: 
+[http://redtamarin.googlecode.com/svn/tags/0.2.5 redtamarin 0.2.5] [http://redtamarin.googlecode.com/svn/as3/redshell/tags/0.2.5 redshell AS3 0.2.5]
 
 == v0.2 ==
 
