Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -20,6 +20,10 @@ tags: n/a
  * !LocalConnection implementation
  * full system info
    * "Mac OS X 10.5.1" instead of "Macintosh"
+ * tools
+   * extract ABC from SWF
+   * inject ABC into SWF
+   * etc.
  
 release: (TBD)
 
