--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -13,7 +13,12 @@ Also, messing a little too much with the Tamarin source code, I ended up having 
 
 Since the Tamarin release *703:2cee46be9ce0* ([https://developer.mozilla.org/En/Tamarin/Tamarin_Releases 02/12/2008]), I decided to make it cleaner.
 
-Now from redtamarin v0.2, the source code of Tamarin is fully sync'ed in this project repository, and as the C/C++ is better organized, update etc. should stay clean in the  futur :).
+Now from redtamarin v0.2, the source code of Tamarin is fully sync'ed in this project repository, and as the C/C++ is better organized, update etc. should stay clean in the  futur :). *<-- this has failed big time*
+
+As of 25/07/2010 redtamarin have taken a completely different approach
+ * now we use the [http://code.google.com/p/redshell/ redshell] project to stay in sync' with [http://hg.mozilla.org/tamarin-redux tamarin-redux] (sync is done every week)
+ * from redshell, we do an `hg archive` and overwrite the `/tamarin-redux` directory, see [http://code.google.com/p/redtamarin/source/detail?r=252 this change] for example.
+ * etc. (TODO explain the other changes)
 
 The code is currently tested and compiled on those systems:
  * Mac OS X 10.5.6 (gcc+make and xcode)
