--- a/wiki/Organization.wiki
+++ b/wiki/Organization.wiki
@@ -35,7 +35,7 @@ here what you will obtain after a checkout
                |_ asc
                |   |_ ...                <- */trunk/modules/asc (Flex SDK)
                |
-               |_ tamarin                <- /redtamarin-root/ (eg. single files configure.py, manifest.mk, etc.)
+               |_ tamarin                <- /redtamarin-root/ (eg. single files)
                    |_ api
                    |   |_ clib           <- /api/clib/trunk/
                    |
