--- a/wiki/Organization.wiki
+++ b/wiki/Organization.wiki
@@ -12,9 +12,9 @@ On another google project [http://code.google.com/p/redshell/ redshell] we sync 
 
 So, each week (in general every sunday), we override this path [http://redtamarin.googlecode.com/svn/tamarin-redux/ /svn/tamarin-redux] with the content of redshell.
 
-Also, we need to be in sync with ASC (ActionScript Compiler)<br>
-so we're checking a subpath of the [http://opensource.adobe.com/wiki/display/flexsdk/Flex+SDK Adobe Flex SDK]<br>
-[http://opensource.adobe.com/svn/opensource/flex/sdk/trunk/modules/asc /modules/asc]
+Also, we need to be in sync with ASC (!ActionScript Compiler)<br>
+so we're checking a subpath of the [http://opensource.adobe.com/wiki/display/flexsdk/Flex+SDK Adobe Flex SDK] the 
+[http://opensource.adobe.com/svn/opensource/flex/sdk/trunk/modules/asc /modules/asc].
 
 == Project structure ==
 
