Edited wiki page through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -16,7 +16,7 @@
   * Documentation
     * [Tamarin Tamarin]
     * [ASC ActionScript Compiler]
-    * [ABC Action Byte Code]
+    * [ABC ActionScript Byte Code]
     * [Examples Examples]
     * [Tutorials Tutorials]
     * [FAQ FAQ]
