Edited wiki page through web user interface.

--- a/wiki/ABC.wiki
+++ b/wiki/ABC.wiki
@@ -5,4 +5,13 @@
 Add your content here.
 
 
-== Details ==
+== Ressources ==
+
+*links:*
+ * [http://github.com/propella/abcsx abcsx] ActionScript Byte Code assembler / disassembler in PLT Scheme and Gauche.
+ *[http://github.com/claus/as3abc as3abc] Low level Actionscript 3 library to parse, create, modify and publish ABC files.
+ * [http://github.com/mzp/scheme-abc scheme-abc] Scheme compiler for ActionScript3 Bytecode/Flash
+
+*documents:*
+ * [http://dougmccune.com/flex/FOTB_Decompiling_Doug_McCune.pdf Steal this Code - Decompiling SWFs for fun and profit](PDF) by [http://dougmccune.com/blog/ Doug McCune]
+ * [www.vpri.org/pdf/m2009010_for_avm2.pdf An Assembler for AVM2 using S-Expression](PDF) by [http://propella.blogspot.com/ Takashi Yamamiya]
