--- a/wiki/ABC.wiki
+++ b/wiki/ABC.wiki
@@ -8,9 +8,9 @@ Add your content here.
 == Ressources ==
 
 *links:*
- * [http://github.com/propella/abcsx abcsx] ActionScript Byte Code assembler / disassembler in PLT Scheme and Gauche.
+ * [http://github.com/propella/abcsx abcsx] !ActionScript Byte Code assembler/disassembler in PLT Scheme and Gauche.
  *[http://github.com/claus/as3abc as3abc] Low level Actionscript 3 library to parse, create, modify and publish ABC files.
- * [http://github.com/mzp/scheme-abc scheme-abc] Scheme compiler for ActionScript3 Bytecode/Flash
+ * [http://github.com/mzp/scheme-abc scheme-abc] Scheme compiler for !ActionScript3 Bytecode/Flash
 
 *documents:*
  * [http://dougmccune.com/flex/FOTB_Decompiling_Doug_McCune.pdf Steal this Code - Decompiling SWFs for fun and profit](PDF) by [http://dougmccune.com/blog/ Doug McCune]
