Edited wiki page through web user interface.

--- a/wiki/ABC.wiki
+++ b/wiki/ABC.wiki
@@ -13,5 +13,5 @@ Add your content here.
  * [http://github.com/mzp/scheme-abc scheme-abc] Scheme compiler for !ActionScript3 Bytecode/Flash
 
 *documents:*
- * [http://dougmccune.com/flex/FOTB_Decompiling_Doug_McCune.pdf Steal this Code - Decompiling SWFs for fun and profit](PDF) by [http://dougmccune.com/blog/ Doug McCune]
- * [http://www.vpri.org/pdf/m2009010_for_avm2.pdf An Assembler for AVM2 using S-Expression](PDF) by [http://propella.blogspot.com/ Takashi Yamamiya]
+ * (PDF) [http://dougmccune.com/flex/FOTB_Decompiling_Doug_McCune.pdf Steal this Code - Decompiling SWFs for fun and profit] by [http://dougmccune.com/blog/ Doug McCune]
+ * (PDF) [http://www.vpri.org/pdf/m2009010_for_avm2.pdf An Assembler for AVM2 using S-Expression] by [http://propella.blogspot.com/ Takashi Yamamiya]
