--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -11,8 +11,8 @@
     * [Roadmap Roadmap]
   * [API API reference]
     * [StandardC C Standard Libraries]
-    * [FlashPlatform Flash Platform APIs]
-    * [AVMPlus AVMPlus APIs]
+    * [FlashPlatform Flash Platform API]
+    * [AVMPlus AVMPlus API]
   * Documentation
     * [Tamarin Tamarin]
     * [ASC ActionScript Compiler]
